# aremi-web-utils

./: .gitignore  Changelog.md  LICENSE  README.md  TODO.tasks  Vagrantfile  apvi-webservice.cabal  aremi-web-utils.cabal  make_package  service.conf  snapshot-2015-03-13.json  stack-lts-2.19.yaml  stack-lts-3.0.yaml  stack.yaml
aemo-webservice/: aemo-webservice.cabal
aemo-webservice/src/: Main.hs
aemo-webservice/src/AEMO/: LivePower.hs
apvi-webservice/: LICENSE  apvi-webservice.cabal  stack.yaml
apvi-webservice/src/: Main.hs
apvi-webservice/src/APVI/: LiveSolar.hs
aremi-web-utils/: LICENSE  aremi-web-utils.cabal  stack.yaml
aremi-web-utils/src/Util/: Charts.hs
config/: aemo-webservice.conf  aemo.conf  aemo_database.conf  apvi-webservice.conf  apvi.conf  database.conf
libraries/servant-0.4.3.1/: servant.cabal
libraries/servant-0.4.3.1/src/Servant/API/: ContentTypes.hs
src/: Main.hs
src/AEMO/: LivePower.hs
src/APVI/: LiveSolar.hs
src/Util/: Charts.hs  Fetch.hs  Periodic.hs  Types.hs  Web.hs
static/: chart.html
