-- The name of the package.
name:                aremi-web-utils

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.9.1.1

-- A short (one-line) description of the package.
synopsis:            A library of utility functions for use in AREMI web services.

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.inside.nicta.com.au/AREMI/apvi-webservice

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Alex Mason

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          Alex.Mason@nicta.com.au

-- A copyright notice.
-- copyright:

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.18


library

  -- ghc-options:

  -- Modules included in this executable, other than Main.
  Exposed-Modules:     Util.Charts
                     , Util.Fetch
                     , Util.Periodic
                     , Util.Types
                     , Util.Web

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base             >= 4.6 && < 4.9
                       , time             >= 1.4 && < 1.6
                       , aeson            >= 0.8 && < 1.0
                       , http-conduit     >= 2.1 && < 2.2
                       , lens             >= 4.7 && < 5.0
                       , text             >= 1.1 && < 2.0
                       , transformers     >= 0.3 && < 1.0
                       , exceptions       >= 0.8 && < 0.9
                       , bytestring       >= 0.10 && < 0.11
                       , Chart            >= 1.3 && < 2.0
                       , Chart-diagrams   >= 1.3 && < 1.6
                       , colour           >= 2.3 && < 2.4
                       , unordered-containers >= 0.2.4 && < 0.2.6
                       , http-types       >= 0.8 && < 0.10
                       , hslogger         >= 1.2 && < 1.3
                       , hslogger-template >= 2.0 && < 2.1
                       , time-units       >= 1.0 && < 1.1
                       , servant-server   >= 0.4 && < 0.5
                       , servant          >= 0.4 && < 0.5
                       , either           >= 4.3 && < 5.0
                       , monad-logger     >= 0.3 && < 1.0
                       , lens-datetime    >= 0.2 && < 1.0
                       , configurator     >= 0.3 && < 1.0
                       , http-media       >= 0.6 && < 1.0
                       , diagrams-rasterific
                       , diagrams-core
                       , diagrams-lib
                       , JuicyPixels
                       , tagged
                       , SVGFonts
                       , async
                       , attoparsec
                       , fast-logger      >= 2.3  && < 3.0
                       , servant-docs     >= 0.4  && < 0.5
                       , markdown         >= 0.1.13 && < 0.2
                       , blaze-html       >= 0.8 && < 0.9
                       , data-default     >= 0.5 && < 0.6

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
